--- a/index.html
+++ b/index.html
@@ -2,10 +2,9 @@
 	<meta charset="UTF-8">
 	<meta name="都市大等々力理科部" content="TCU Tosoroki Science Research Club">
 	<meta name="viewport" content="width=device-width">
-	<title>都市大等々力理科部</title>
+	<title>都市大等々力理科部藍桐祭</title>
 	<link rel="stylesheet" media="all" href="css/style.css">
 	<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.8.0/jquery.min.js"></script>
-	<script src="js/script.js"></script>
 </head>
 
 <body id="top">
