--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <html>
   
-<html lang="ja"><head>
+<html lang="ja">
+<head>
 	<meta charset="UTF-8">
 	<meta name="都市大等々力理科部" content="TCU Tosoroki Science Research Club">
 	<meta name="viewport" content="width=device-width">
@@ -22,10 +23,10 @@
         <ul class="pc">
         <li><a href="">TOP<span>トップ</a></span></li>
         <li><a href="">BIOLOGY LABORATORY<span>生物室</a></span></li>
-        <li><a href="">CHEMISTRY LABORATORY<span>化学室</a></span></li>
-        <li><a href="">TARTAN<span>タータン</a></span></li>        
-        <li><a href="https://aigirisai-2021.com">EXECUTIVE OFFICE<span>執行部HP</a></span></li>
+        <li><a href="">CHEMISTRY LABORATORY<span>化学室</a></span></li>  
+        <li><a href="">TARTAN<span>タータン</a></span></li>
         <li><a href="">QUESTION<span>アンケート</a></span></li>
+        <li><a href=""><span></a></span></li>
         </ul>
       </nav>
     </div>
@@ -83,30 +84,40 @@
         </p>
         </div>
       </div>
-    　<div class="flex_div">
-       <div class="mission" style="position: relative; left: 0px; top: 0px; opacity: 1; transition: all 400ms ease 0s;">
-         <p class="txt3">お客さまへのご協力のお願い</p>
-         <p class="txt4">さらに安心して展示をご覧いただくために、お客さまにも以下のご協力をお願いします。</p>
-         <p class="txt5">・発表会場に入る際の手指の消毒<br>・発表会場内でのマスクの着用<br>・発表会場内での会話を控える<br>・発表会場内で飲食をしない<br>・展示をご覧いただいてる際のお客さま同士の間隔の確保
-	     </div>
-      </div>
   </section>
 
 
   <section class="detail_area sub_area date_area">
     <h2 class="smoth slide">ACCESS MAP</h2>
     <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3243.560563334317!2d139.6498738152139!3d35.61390488020995!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x6018f4f7bc55522f%3A0xd108ecc848d5815e!2z5p2x5Lqs6YO95biC5aSn5a2m562J44CF5Yqb5Lit5a2m5qCh44O76auY562J5a2m5qCh!5e0!3m2!1sja!2sjp!4v1628150304124!5m2!1sja!2sjp" width="100%" height="450" style="border:0;" allowfullscreen="" loading="lazy"></iframe>
-    <p class="txt"><br>【住所】<br>
-            東京都世田谷区等々力８丁目10-１<br><br>
-            【電車】<br>
-            東急大井町線　等々力駅　下車 徒歩10分<br><br>
-            【バス】<br>
-            黒02系統　都市大等々力キャンパス前　下車 徒歩１分<br>
-            渋82系統　玉川警察署前　下車 徒歩５分<br>
-            等11系統　玉川警察署前　下車 徒歩５分<br>
-            等12系統　玉川警察署前　下車 徒歩５分<br>
-            東98系統　都市大等々力キャンパス前　下車 徒歩１分<br><br>
-            ＊駐車場がありませんので、お車でのご来校はご遠慮ください。なお、学校周辺の道路は、駐車禁止となっております。</p>
+    <p class="txt"><br>【住所】東京都世田谷区等々力８丁目10-１<br>【電車】東急大井町線　等々力駅　下車 徒歩10分<br>【バス】黒02系統　都市大等々力キャンパス前　下車 徒歩１分<br>　　　　渋82系統　玉川警察署前　下車 徒歩５分<br>　　　　等11系統　玉川警察署前　下車 徒歩５分<br>　　　　等12系統　玉川警察署前　下車 徒歩５分<br>　　　　東98系統　都市大等々力キャンパス前　下車 徒歩１分<br><br>＊駐車場がありませんので、お車でのご来校はご遠慮ください。なお、学校周辺の道路は、駐車禁止となっております。</p>
+  </section>
+
+  <section class="detail_area sub_area date_area">
+    <h2 class="smoth slide">COLLECTION OF WEB LINK</h2>
+      <div class="flex_div">
+        <div class="first_div">
+        <a href="">
+        <img src="https://pbs.twimg.com/profile_banners/1223233254657937408/1617714307/1500x500">
+        </a>
+        </div>
+        <div class="second_div">
+        <a href="https://twitter.com/tcut_sci_tech">
+        <img src="https://pbs.twimg.com/profile_banners/1223233254657937408/1617714307/1500x500">
+        </a>
+        </div>
+      </div>
+      <div class="flex_div">
+        <div class="first_div">
+        <a href="https://www.tcu-todoroki.ed.jp/">
+        <img src="https://pbs.twimg.com/profile_banners/1223233254657937408/1617714307/1500x500">
+        </a>
+        </div>
+        <div class="second_div">
+        <a href="https://aigirisai-2021.com">
+        <img src="https://pbs.twimg.com/profile_banners/1223233254657937408/1617714307/1500x500">
+        </a>
+      </div>
   </section>
 
   <footer id="footer">
