--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
       <nav>
         <ul class="pc">
         <li><a href="">TOP<span>トップ</a></span></li>
-        <li><a href="">BIOLOGY LABORATORY<span>生物室</a></span></li>
+        <li><a href="https://tcut-sci-tech.github.io/aigirisai-biology/">BIOLOGY LABORATORY<span>生物室</a></span></li>
         <li><a href="">CHEMISTRY LABORATORY<span>化学室</a></span></li>  
         <li><a href="">TARTAN<span>タータン</a></span></li>
         <li><a href="">QUESTION<span>アンケート</a></span></li>
