--- a/index.html
+++ b/index.html
@@ -103,7 +103,7 @@
         </div>
         <div class="second_div">
         <a href="https://twitter.com/tcut_sci_tech">
-        <img src="https://pbs.twimg.com/profile_banners/1223233254657937408/1617714307/1500x500">
+        <img src="https://github.com/tcut-sci-tech/aigirisai/blob/main/Twitter.jpg">
         </a>
         </div>
       </div>
