--- a/index.html
+++ b/index.html
@@ -110,7 +110,7 @@
       <div class="flex_div">
         <div class="first_div">
         <a href="https://www.tcu-todoroki.ed.jp/">
-        <img src="https://github.com/tcut-sci-tech/aigirisai/blob/main/%E9%83%BD%E5%B8%82%E5%A4%A7%E7%AD%89%E3%80%85%E5%8A%9B.jpg">
+        <img src="https://github.com/tcut-sci-tech/aigirisai/blob/main/TCUTodoroki.jpg">
         </a>
         </div>
         <div class="second_div">
