--- a/index.html
+++ b/index.html
@@ -98,7 +98,7 @@
       <div class="flex_div">
         <div class="first_div">
         <a href="">
-        <img src="https://pbs.twimg.com/profile_banners/1223233254657937408/1617714307/1500x500">
+        <img src="https://github.com/tcut-sci-tech/aigirisai/blob/3ea61484c8db725ee46885850ae78bd9c0811f87/tcut_hp.jpg">
         </a>
         </div>
         <div class="second_div">
