--- a/index.html
+++ b/index.html
@@ -115,7 +115,7 @@
         </div>
         <div class="second_div">
         <a href="https://aigirisai-2021.com">
-        <img src="https://github.com/tcut-sci-tech/aigirisai/blob/bd8f43fe35f7129d1304148df982d0ecb7c3bd9f/tcu_aigiri_hp.jpg">
+        <img src="tcu_aigiri_hp.jpg">
         </a>
       </div>
   </section>
