--- a/index.html
+++ b/index.html
@@ -97,20 +97,20 @@
     <h2 class="smoth slide">COLLECTION OF WEB LINK</h2>
       <div class="flex_div">
         <div class="first_div">
-        <a href="">
-        <img src="https://github.com/tcut-sci-tech/aigirisai/blob/3ea61484c8db725ee46885850ae78bd9c0811f87/tcut_hp.jpg">
+        <a href="https://tcut-sci-tech.github.io/top/">
+        <img src="tcut_hp.jpg">
         </a>
         </div>
         <div class="second_div">
         <a href="https://twitter.com/tcut_sci_tech">
-        <img src="https://github.com/tcut-sci-tech/aigirisai/blob/3bdc29f6ac401e28d8155e7f01d77b84466cab0e/tcut_twitter.jpg">
+        <img src="tcut_twitter.jpg">
         </a>
         </div>
       </div>
       <div class="flex_div">
         <div class="first_div">
         <a href="https://www.tcu-todoroki.ed.jp/">
-        <img src="https://github.com/tcut-sci-tech/aigirisai/blob/fcd898cf35f9f5fc37b12938320a9bd10fb060e1/tcu_hp.jpg">
+        <img src="tcu_hp.jpg">
         </a>
         </div>
         <div class="second_div">
