--- a/index.html
+++ b/index.html
@@ -12,6 +12,8 @@
 
 <body id="top">
   <section class="wrap_top">
+    <div id="content">
+			<p id="mainImg"><img src="生物室.jpg" width="max" height="100%"></p>
     <div class="side_area topPage">
       <div id="navBtn">
         <span class="top"></span>
