--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 <body id="top">
   <section class="wrap_top">
     <div id="content">
-			<p id="mainImg"><img src="生物室.jpg" width="max" height="100%"></p>
+			<p id="mainImg"><img src="生物室.jpg" width="100%" height="auto"></p>
     <div class="side_area topPage">
       <div id="navBtn">
         <span class="top"></span>
