--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
         <li><a href="https://tcut-sci-tech.github.io/aigirisai/">TOP<span>トップ</a></span></li>
         <li><a href="https://tcut-sci-tech.github.io/aigirisai-biology/">BIOLOGY LABORATORY<span>生物室</a></span></li>
         <li><a href="">CHEMISTRY LABORATORY<span>化学室</a></span></li>  
-        <li><a href="">TARTAN<span>タータン</a></span></li>
+        <li><a href="">GROUND<span>校庭</a></span></li>
         <li><a href="">QUESTION<span>アンケート</a></span></li>
         <li><a href=""><span></a></span></li>
         </ul>
@@ -38,20 +38,20 @@
 
   <section class="detail_area sub_area date_area">
     <h2 class="smoth slide">2021.10.2(<i class="sat">sat</i>)・10.3(<i class="sun">sun</i>)</h2>
-      <p class="txt">昨年度は新型コロナウイルスの影響で開催出来ませんでしたが、今年度は開催することが決定しました！！！昨年度は新型コロナウイルスの影響で開催出来ませんでしたが、今年度は開催することが決定しました！！！昨年度は新型コロナウイルスの影響で開催出来ませんでしたが、今年度は開催することが決定しました！！！昨年度は新型コロナウイルスの影響で開催出来ませんでしたが、今年度は開催することが決定しました！！！昨年度は新型コロナウイルスの影響で開催出来ませんでしたが、今年度は開催することが決定しました！！！昨年度は新型コロナウイルスの影響で開催出来ませんでしたが、今年度は開催することが決定しました！！！昨年度は新型コロナウイルスの影響で開催出来ませんでしたが、今年度は開催することが決定しました！！！昨年度は新型コロナウイルスの影響で開催出来ませんでしたが、今年度は開催することが決定しました！！！
+      <p class="txt">　10月2日,3日に開催予定だった第75回藍桐祭は、保護者の方々や受験生の皆さんをお迎えして開催する予定でしたが、新型コロナウイルスの感染拡大に伴い<b>本校生徒のみでの開催</b>となりました。藍桐祭の開催を楽しみにお待ちいただいていた皆さんには、お詫び申し上げます。<br>　しかし、<b>理科部初のオンライン開催</b>をしたいと思います。
       </p>
       <div class="btn timelink">
-        <a href="" class="main">藍桐祭 入場予約サイトはこちら<br>＊今年度は予約制での入場となります。</a>
+        <a href="" class="main">東京都市大学等々力中学校高等学校 藍桐祭<br>オンラインコンテンツはこちら</a>
       </div>
     </div>
   </section>
 
   <section class="detail_area sub_area date_area">
     <h2 class="smoth slide">GREETING</h2>
-      <p class="txt">昨年度は新型コロナウイルスの影響で開催出来ませんでしたが、今年度は開催することが決定しました！！！昨年度は新型コロナウイルスの影響で開催出来ませんでしたが、今年度は開催することが決定しました！！！昨年度は新型コロナウイルスの影響で開催出来ませんでしたが、今年度は開催することが決定しました！！！昨年度は新型コロナウイルスの影響で開催出来ませんでしたが、今年度は開催することが決定しました！！！昨年度は新型コロナウイルスの影響で開催出来ませんでしたが、今年度は開催することが決定しました！！！昨年度は新型コロナウイルスの影響で開催出来ませんでしたが、今年度は開催することが決定しました！！！昨年度は新型コロナウイルスの影響で開催出来ませんでしたが、今年度は開催することが決定しました！！！昨年度は新型コロナウイルスの影響で開催出来ませんでしたが、今年度は開催することが決定しました！！！
+      <p class="txt">　昨年度は新型コロナウイルスの影響で開催出来ませんでしたが、今年度は開催することが決定しました！！！昨年度は新型コロナウイルスの影響で開催出来ませんでしたが、今年度は開催することが決定しました！！！昨年度は新型コロナウイルスの影響で開催出来ませんでしたが、今年度は開催することが決定しました！！！昨年度は新型コロナウイルスの影響で開催出来ませんでしたが、今年度は開催することが決定しました！！！昨年度は新型コロナウイルスの影響で開催出来ませんでしたが、今年度は開催することが決定しました！！！昨年度は新型コロナウイルスの影響で開催出来ませんでしたが、今年度は開催することが決定しました！！！昨年度は新型コロナウイルスの影響で開催出来ませんでしたが、今年度は開催することが決定しました！！！昨年度は新型コロナウイルスの影響で開催出来ませんでしたが、今年度は開催することが決定しました！！！
       <p class="txt1">理科部顧問　</p>
       </p><br>
-      <p class="txt">昨年度は新型コロナウイルスの影響で開催出来ませんでしたが、今年度は開催することが決定しました！！！昨年度は新型コロナウイルスの影響で開催出来ませんでしたが、今年度は開催することが決定しました！！！昨年度は新型コロナウイルスの影響で開催出来ませんでしたが、今年度は開催することが決定しました！！！昨年度は新型コロナウイルスの影響で開催出来ませんでしたが、今年度は開催することが決定しました！！！昨年度は新型コロナウイルスの影響で開催出来ませんでしたが、今年度は開催することが決定しました！！！昨年度は新型コロナウイルスの影響で開催出来ませんでしたが、今年度は開催することが決定しました！！！昨年度は新型コロナウイルスの影響で開催出来ませんでしたが、今年度は開催することが決定しました！！！昨年度は新型コロナウイルスの影響で開催出来ませんでしたが、今年度は開催することが決定しました！！！
+      <p class="txt">　昨年度は新型コロナウイルスの影響で開催出来ませんでしたが、今年度は開催することが決定しました！！！昨年度は新型コロナウイルスの影響で開催出来ませんでしたが、今年度は開催することが決定しました！！！昨年度は新型コロナウイルスの影響で開催出来ませんでしたが、今年度は開催することが決定しました！！！昨年度は新型コロナウイルスの影響で開催出来ませんでしたが、今年度は開催することが決定しました！！！昨年度は新型コロナウイルスの影響で開催出来ませんでしたが、今年度は開催することが決定しました！！！昨年度は新型コロナウイルスの影響で開催出来ませんでしたが、今年度は開催することが決定しました！！！昨年度は新型コロナウイルスの影響で開催出来ませんでしたが、今年度は開催することが決定しました！！！昨年度は新型コロナウイルスの影響で開催出来ませんでしたが、今年度は開催することが決定しました！！！
       <p class="txt1">理科部部長　</p>
         </div>
       </p>
@@ -60,7 +60,7 @@
    
   <section class="detail_area sub_area date_area">
     <h2 class="smoth slide">COVID-19 PROTECTIVE MEASURES</h2>
-      <p class="txt">東京都市大学等々力中学校・高等学校 理科部では、本校が定めたガイドライン（部活・委員会共通点時発表団体コロナ対策）に基づき、以下の取り組みを実施しています。
+      <p class="txt">東京都市大学等々力中学校・高等学校 理科部では、本校で定められたガイドライン（部活・委員会共通点時発表団体コロナ対策）に基づき、以下の取り組みを実施しています。
       </p>
       <div class="flex_div">
         <div class="first_div">
@@ -77,12 +77,12 @@
       <div class="flex_div">
         <div class="first_div">
         <p class="txt2">各発表会場内の換気の徹底</p>
-        <p class="txt">各発表会場は前後扉 / 窓を開けることで換気を行っています。これに加えて、換気扇 / 空調装置 / サーキュレーターを使用して換気をさらに促進させています。
+        <p class="txt">各発表会場は前後扉,窓を常時解放しておくことで換気を行っています。これに加えて、換気扇,空調装置,サーキュレーターを使用して換気をさらに促進させています。
         </p>
         </div>
         <div class="second_div">
         <p class="txt2">その他各発表会場内の対策</p>
-        <p class="txt">各発表会場は前後扉 / 窓を開けることで換気を行っています。これに加えて、換気扇 / 空調装置 / サーキュレーターを使用して換気をさらに促進させています。
+        <p class="txt">お客様同士の距離を確保するために、展示をご覧いただく立ち位置を示すマークを記したり、発表会場内の人数を制限するなどしています。
         </p>
         </div>
       </div>
