--- a/index.html
+++ b/index.html
@@ -14,35 +14,14 @@
   <section class="wrap_top">
     <div id="content">
 			<p id="mainImg"><img src="生物室.jpg" width="100%" height="auto"></p>
-    <div class="side_area topPage">
-      <div id="navBtn">
-        <span class="top"></span>
-        <span class="bottom"></span>
-      </div>
-      <script type="text/javascript">include("parts/nav.html");
-      </script>
-      <nav>
-        <ul class="pc">
-        <li><a href="https://tcut-sci-tech.github.io/aigirisai/">TOP<span>トップ</a></span></li>
-        <li><a href="https://tcut-sci-tech.github.io/aigirisai-biology/">BIOLOGY LABORATORY<span>生物室</a></span></li>
-        <li><a href="">CHEMISTRY LABORATORY<span>化学室</a></span></li>  
-        <li><a href="">GROUND<span>校庭</a></span></li>
-        <li><a href="">QUESTION<span>アンケート</a></span></li>
-        <li><a href=""><span></a></span></li>
-        </ul>
-      </nav>
-    </div>
   </section>
 
 
 
   <section class="detail_area sub_area date_area">
     <h2 class="smoth slide">2021.10.2(<i class="sat">sat</i>)・10.3(<i class="sun">sun</i>)</h2>
-      <p class="txt">　10月2日,3日に開催予定だった第75回藍桐祭は、保護者の方々や受験生の皆さんをお迎えして開催する予定でしたが、新型コロナウイルスの感染拡大に伴い<b>本校生徒のみでの開催</b>となりました。藍桐祭の開催を楽しみにお待ちいただいていた皆さんには、お詫び申し上げます。<br>　しかし、<b>理科部初のオンライン開催</b>をしたいと思います。
+      <p class="txt">　10月2日,3日に開催予定だった第75回藍桐祭は、保護者の方々や受験生の皆さんをお迎えして開催する予定でしたが、新型コロナウイルスの感染拡大に伴い<b>本校生徒のみでの開催</b>となりました。藍桐祭の開催を楽しみにお待ちいただいていた皆さんには、お詫び申し上げます。<br>　今年度は理科部初のオンライン開催とさせていただきたいと思います。
       </p>
-      <div class="btn timelink">
-        <a href="" class="main">東京都市大学等々力中学校高等学校 藍桐祭<br>オンラインコンテンツはこちら</a>
-      </div>
     </div>
   </section>
 
@@ -51,7 +30,7 @@
       <p class="txt">　昨年度は新型コロナウイルスの影響で開催出来ませんでしたが、今年度は開催することが決定しました！！！昨年度は新型コロナウイルスの影響で開催出来ませんでしたが、今年度は開催することが決定しました！！！昨年度は新型コロナウイルスの影響で開催出来ませんでしたが、今年度は開催することが決定しました！！！昨年度は新型コロナウイルスの影響で開催出来ませんでしたが、今年度は開催することが決定しました！！！昨年度は新型コロナウイルスの影響で開催出来ませんでしたが、今年度は開催することが決定しました！！！昨年度は新型コロナウイルスの影響で開催出来ませんでしたが、今年度は開催することが決定しました！！！昨年度は新型コロナウイルスの影響で開催出来ませんでしたが、今年度は開催することが決定しました！！！昨年度は新型コロナウイルスの影響で開催出来ませんでしたが、今年度は開催することが決定しました！！！
       <p class="txt1">理科部顧問　</p>
       </p><br>
-      <p class="txt">　昨年度は新型コロナウイルスの影響で開催出来ませんでしたが、今年度は開催することが決定しました！！！昨年度は新型コロナウイルスの影響で開催出来ませんでしたが、今年度は開催することが決定しました！！！昨年度は新型コロナウイルスの影響で開催出来ませんでしたが、今年度は開催することが決定しました！！！昨年度は新型コロナウイルスの影響で開催出来ませんでしたが、今年度は開催することが決定しました！！！昨年度は新型コロナウイルスの影響で開催出来ませんでしたが、今年度は開催することが決定しました！！！昨年度は新型コロナウイルスの影響で開催出来ませんでしたが、今年度は開催することが決定しました！！！昨年度は新型コロナウイルスの影響で開催出来ませんでしたが、今年度は開催することが決定しました！！！昨年度は新型コロナウイルスの影響で開催出来ませんでしたが、今年度は開催することが決定しました！！！
+      <p class="txt">　本日は理科部 藍桐祭特設ページをご覧いただきありがとうございます。理科部員を代表して心より歓迎いたします。今年は新型コロナウイル感染症の感染状況を受け、一般のお客様に直接理科部の展示をご覧いただくことが出来なくなってしまい、とても残念に思います。<br>　藍桐祭は、理科部員が日々活動に全力を尽くし励んでいる成果を一般の方々に見ていただける貴重な機会です。
       <p class="txt1">理科部部長　</p>
         </div>
       </p>
