--- a/index.html
+++ b/index.html
@@ -14,53 +14,74 @@
   <section class="wrap_top">
     <div id="content">
 			<p id="mainImg"><img src="生物室.jpg" width="100%" height="auto"></p>
+    <div class="side_area topPage">
+      <div id="navBtn">
+        <span class="top"></span>
+        <span class="bottom"></span>
+      </div>
+      <script type="text/javascript">include("parts/nav.html");
+      </script>
+      <nav>
+        <ul class="pc">
+        <li><a href="https://tcut-sci-tech.github.io/aigirisai21/">TOP<span>トップ</a></span></li>
+        <li><a href="https://tcut-sci-tech.github.io/aigirisai-biology/">BIOLOGY LABORATORY<span>生物室</a></span></li>
+        <li><a href="">CHEMISTRY LABORATORY<span>化学室</a></span></li>  
+        <li><a href="">GROUND<span>校庭</a></span></li>
+        <li><a href="">QUESTION<span>アンケート</a></span></li>
+        <li><a href=""><span></a></span></li>
+        </ul>
+      </nav>
+    </div>
   </section>
 
 
 
   <section class="detail_area sub_area date_area">
-    <h2 class="smoth slide">2021.10.2(<i class="sat">sat</i>)・10.3(<i class="sun">sun</i>)</h2>
-      <p class="txt">　10月2日,3日に開催予定だった第75回藍桐祭は、保護者の方々や受験生の皆さんをお迎えして開催する予定でしたが、新型コロナウイルスの感染拡大に伴い<b>本校生徒のみでの開催</b>となりました。藍桐祭の開催を楽しみにお待ちいただいていた皆さんには、お詫び申し上げます。<br>　今年度は理科部初のオンライン開催とさせていただきたいと思います。
+    <h1>2021.10.2(<i class="sat">sat</i>)・10.3(<i class="sun">sun</i>)</h1>
+      <p class="txt">10月2日,3日に開催予定だった第75回藍桐祭は、保護者の方々や受験生の皆さんをお迎えして開催する予定でしたが、新型コロナウイルスの感染拡大に伴い<b>本校生徒のみでの開催</b>となりました。藍桐祭の開催を楽しみにお待ちいただいていた皆さんには、お詫び申し上げます。今年度は理科部初のオンライン開催とさせていただきたいと思います。
       </p>
+      <div class="btn timelink">
+        <a href="" class="main">東京都市大学等々力中学校高等学校 藍桐祭<br>オンラインコンテンツはこちら</a>
+      </div>
     </div>
   </section>
 
   <section class="detail_area sub_area date_area">
-    <h2 class="smoth slide">GREETING</h2>
-      <p class="txt">　昨年度は新型コロナウイルスの影響で開催出来ませんでしたが、今年度は開催することが決定しました！！！昨年度は新型コロナウイルスの影響で開催出来ませんでしたが、今年度は開催することが決定しました！！！昨年度は新型コロナウイルスの影響で開催出来ませんでしたが、今年度は開催することが決定しました！！！昨年度は新型コロナウイルスの影響で開催出来ませんでしたが、今年度は開催することが決定しました！！！昨年度は新型コロナウイルスの影響で開催出来ませんでしたが、今年度は開催することが決定しました！！！昨年度は新型コロナウイルスの影響で開催出来ませんでしたが、今年度は開催することが決定しました！！！昨年度は新型コロナウイルスの影響で開催出来ませんでしたが、今年度は開催することが決定しました！！！昨年度は新型コロナウイルスの影響で開催出来ませんでしたが、今年度は開催することが決定しました！！！
-      <p class="txt1">理科部顧問　</p>
-      </p><br>
-      <p class="txt">　本日は理科部 藍桐祭特設ページをご覧いただきありがとうございます。理科部員を代表して心より歓迎いたします。今年は新型コロナウイル感染症の感染状況を受け、一般のお客様に直接理科部の展示をご覧いただくことが出来なくなってしまい、とても残念に思います。<br>　藍桐祭は、理科部員が日々活動に全力を尽くし励んでいる成果を一般の方々に見ていただける貴重な機会です。
-      <p class="txt1">理科部部長　</p>
+    <h1>GREETING</h1>
+      <p class="txt">　この度は、東京都市大学等々力中学校・高等学校理科部の藍桐祭特設ページにお越しいただき、誠にありがとうございます。理科部の顧問を務めさせていただいております、平山瑛一と申します。<br>　本校理科部は、平成20年の発足以来、身近な自然現象の探求、科学技術の育成、未知なるものへの好奇心を柱に活動を続け、現在では本校文化部の中でも最も大きな規模をほこる団体へと発展してまいりました。その活動は動植物研究、生態調査、機械・情報工学、天体観測やプラネタリウム作成など多岐にわたり、多くの生徒が研究活動に携わっております。<br>　しかしながら、昨今の新型コロナウイルス感染の拡大に伴い、活動の範囲や日数などに大きな制限のかかる日々が続いてまいりました。<br>　此度、Web上ではありますが、本校理科部のこれまでの活動や、現在の研究・調査を発表する目的で、特別展「サイヱンスノハナ」を開催させていただきます。<br>　13年間にわたる理科部の軌跡から、自然科学や科学技術への興味をますます深めていただければ幸甚です。どうぞ、ごゆっくりお楽しみください。
+      <p class="txt1">理科部 顧問　平山瑛一　</p>
+      </p><br><br>
+      <p class="txt">　本日は都市大等々力理科部 藍桐祭特設ページをご覧いただきありがとうございます。理科部員を代表して心よりお礼申し上げます。<br>　今年度の藍桐祭では、普段は見ることの出来ない理科部の所蔵する様々な生き物の標本や天体観測の記録、電気自動車などの展示や、毎年多くの来校者の皆さまに大人気の科学体験教室や電気自動車の試乗体験などの企画を用意しました。この他にも、自然科学や科学技術への興味を深めてもらえるような企画を多数用意しております。<br>　最後に、今年度の藍桐祭は新型コロナウイルス感染症の感染拡大を受け、直接は展示をご覧いただくことは出来ませんが、理科部員が日々全力を尽くし励んでいる成果を保護者の方々や受験生の皆さんに見て頂くために、理科部員一同、この藍桐祭 特設ページにて展示発表出来るように準備を進めて参りました。最後までお楽しみいただければ幸いです。
+      <p class="txt1">理科部 部長　</p>
         </div>
       </p>
   </section>
   
    
   <section class="detail_area sub_area date_area">
-    <h2 class="smoth slide">COVID-19 PROTECTIVE MEASURES</h2>
+    <h1>COVID-19 PROTECTIVE MEASURES</h1>
       <p class="txt">東京都市大学等々力中学校・高等学校 理科部では、本校で定められたガイドライン（部活・委員会共通点時発表団体コロナ対策）に基づき、以下の取り組みを実施しています。
       </p>
       <div class="flex_div">
         <div class="first_div">
-        <p class="txt2">定期的な清掃・消毒・除菌</p>
+        <p class="txt2"><b>定期的な清掃・消毒・除菌</b></p>
         <p class="txt">定期的な清掃をする際に、お客様の手の触れる場所を中心に消毒液等による消毒・除菌を行っています。また、各発表会場の入り口に消毒液を設置しています。
         </p>
         </div>
         <div class="second_div">
-        <p class="txt2">解説担当生徒のマスク着用</p>
+        <p class="txt2"><b>解説担当生徒のマスク着用</b></p>
         <p class="txt">解説担当生徒のマスク着用を義務付けています。また、生徒同士の距離の確保やシフト前に必ず検温をはじめとする健康チェックを実施しています。
         </p>
         </div>
       </div>
       <div class="flex_div">
         <div class="first_div">
-        <p class="txt2">各発表会場内の換気の徹底</p>
-        <p class="txt">各発表会場は前後扉,窓を常時解放しておくことで換気を行っています。これに加えて、換気扇,空調装置,サーキュレーターを使用して換気をさらに促進させています。
+        <p class="txt2"><b>各発表会場内の換気の徹底</b></p>
+        <p class="txt">各発表会場は前後扉・窓を常時解放しておくことで換気を行っています。これに加えて、換気扇・空調装置・サーキュレーターを使用して換気をさらに促進させています。
         </p>
         </div>
         <div class="second_div">
-        <p class="txt2">その他各発表会場内の対策</p>
+        <p class="txt2"><b>その他各発表会場内の対策</b></p>
         <p class="txt">お客様同士の距離を確保するために、展示をご覧いただく立ち位置を示すマークを記したり、発表会場内の人数を制限するなどしています。
         </p>
         </div>
@@ -69,13 +90,13 @@
 
 
   <section class="detail_area sub_area date_area">
-    <h2 class="smoth slide">ACCESS MAP</h2>
+    <h1>ACCESS MAP</h1>
     <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3243.560563334317!2d139.6498738152139!3d35.61390488020995!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x6018f4f7bc55522f%3A0xd108ecc848d5815e!2z5p2x5Lqs6YO95biC5aSn5a2m562J44CF5Yqb5Lit5a2m5qCh44O76auY562J5a2m5qCh!5e0!3m2!1sja!2sjp!4v1628150304124!5m2!1sja!2sjp" width="100%" height="450" style="border:0;" allowfullscreen="" loading="lazy"></iframe>
-    <p class="txt"><br>【住所】東京都世田谷区等々力８丁目10-１<br>【電車】東急大井町線　等々力駅　下車 徒歩10分<br>【バス】黒02系統　都市大等々力キャンパス前　下車 徒歩１分<br>　　　　渋82系統　玉川警察署前　下車 徒歩５分<br>　　　　等11系統　玉川警察署前　下車 徒歩５分<br>　　　　等12系統　玉川警察署前　下車 徒歩５分<br>　　　　東98系統　都市大等々力キャンパス前　下車 徒歩１分<br><br>＊駐車場がありませんので、お車でのご来校はご遠慮ください。なお、学校周辺の道路は、駐車禁止となっております。</p>
+    <p class="txt"><br>【住所】東京都世田谷区等々力８丁目10-１<br>【電車】東急大井町線　等々力駅　下車 徒歩10分<br>【バス】黒02系統　都市大等々力キャンパス前　下車 徒歩１分<br>　　　　渋82系統　玉川警察署前　下車 徒歩５分<br>　　　　等11系統　玉川警察署前　下車 徒歩５分<br>　　　　等12系統　玉川警察署前　下車 徒歩５分<br>　　　　東98系統　都市大等々力キャンパス前　下車 徒歩１分<br><br><b>＊駐車場がありませんので、お車でのご来校はご遠慮ください。なお、学校周辺の道路は、駐車禁止となっております。</b></p>
   </section>
 
   <section class="detail_area sub_area date_area">
-    <h2 class="smoth slide">COLLECTION OF WEB LINK</h2>
+    <h1>COLLECTION OF WEB LINK</h1>
       <div class="flex_div">
         <div class="first_div">
         <a href="https://tcut-sci-tech.github.io/top/">
