--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <html lang="ja">
 <head>
 	<meta charset="UTF-8">
-	<meta name="都市大等々力理科部" content="TCU Tosoroki Science Research Club">
+	<meta name="都市大等々力理科部藍桐祭" content="TCU Tosoroki Science Research Club">
 	<meta name="viewport" content="width=device-width">
 	<title>都市大等々力理科部藍桐祭</title>
 	<link rel="stylesheet" media="all" href="css/style.css">
@@ -23,7 +23,7 @@
         <nav>
           <ul class="pc">
             <li><a href="https://tcut-sci-tech.github.io/aigirisai21/">TOP<span>トップ</a></span></li>
-            <li><a href="https://tcut-sci-tech.github.io/aigirisai-biology/">BIOLOGY LABORATORY<span>生物室</a></span></li>
+            <li><a href="https://tcut-sci-tech.github.io/aigirisai21-biology/">BIOLOGY LABORATORY<span>生物室</a></span></li>
             <li><a href="">CHEMISTRY LABORATORY<span>化学室</a></span></li>
             <li><a href="">GROUND<span>校庭</a></span></li>
             <li><a href="">QUESTION<span>アンケート</a></span></li>
@@ -44,6 +44,8 @@
     </div>
   </section>
 
+  
+  
   <section class="detail_area sub_area date_area">
     <h1>GREETING</h1>
     <p class="txt">　この度は、東京都市大学等々力中学校・高等学校理科部の藍桐祭特設ページにお越しいただき、誠にありがとうございます。理科部の顧問を務めさせていただいております、平山瑛一と申します。<br>　本校理科部は、平成20年の発足以来、身近な自然現象の探求、科学技術の育成、未知なるものへの好奇心を柱に活動を続け、現在では本校文化部の中でも最も大きな規模をほこる団体へと発展してまいりました。その活動は動植物研究、生態調査、機械・情報工学、天体観測やプラネタリウム作成など多岐にわたり、多くの生徒が研究活動に携わっております。<br>　しかしながら、昨今の新型コロナウイルス感染の拡大に伴い、活動の範囲や日数などに大きな制限のかかる日々が続いてまいりました。<br>　此度、Web上ではありますが、本校理科部のこれまでの活動や、現在の研究・調査を発表する目的で、特別展「サイヱンスノハナ」を開催させていただきます。<br>　13年間にわたる理科部の軌跡から、自然科学や科学技術への興味をますます深めていただければ幸甚です。どうぞ、ごゆっくりお楽しみください。
@@ -81,6 +83,7 @@
     </div>
   </section>
 
+  
 
   <section class="detail_area sub_area date_area">
     <h1>ACCESS MAP</h1>
