--- a/index.html
+++ b/index.html
@@ -24,8 +24,8 @@
           <ul class="pc">
             <li><a href="https://tcut-sci-tech.github.io/aigirisai21/">TOP<span>トップ</a></span></li>
             <li><a href="https://tcut-sci-tech.github.io/aigirisai21-biology/">BIOLOGY LABORATORY<span>生物室</a></span></li>
-            <li><a href="">CHEMISTRY LABORATORY<span>化学室</a></span></li>
-            <li><a href="">GROUND<span>校庭</a></span></li>
+            <li><a href="https://tcut-sci-tech.github.io/aigirisai21-chemistry/">CHEMISTRY LABORATORY<span>化学室</a></span></li>
+            <li><a href="https://tcut-sci-tech.github.io/aigirisai21-ground/">GROUND<span>校庭</a></span></li>
             <li><a href="">QUESTION<span>アンケート</a></span></li>
             <li><a href=""><span></a></span></li>
           </ul>
