--- a/index.html
+++ b/index.html
@@ -38,20 +38,50 @@
   
   <section class="detail_area sub_area date_area">
     <h1>2021.10.2(<i class="sat">sat</i>)・10.3(<i class="sun">sun</i>)</h1>
-    <p class="txt">10月2日,3日に開催予定だった第75回藍桐祭は、保護者の方々や受験生の皆さんをお迎えして開催する予定でしたが、新型コロナウイルスの感染拡大に伴い<b>本校生徒のみでの開催</b>となりました。藍桐祭の開催を楽しみにお待ちいただいていた皆さんには、お詫び申し上げます。今年度は理科部初のオンライン開催とさせていただきたいと思います。</p>
-    <div class="btn timelink">
-      <a href="" class="main">東京都市大学等々力中学校高等学校 藍桐祭<br>オンラインコンテンツはこちら</a>
-    </div>
+      <div class="flex_div">
+        <div class="first_div">
+          <div class="btn timelink">
+            <a href="" class="main"><b>脊椎動物研究班 展示</b></a>
+          </div>
+        </div>
+        <div class="first_div">
+          <div class="btn timelink">
+            <a href="" class="main"><b>昆虫調査班 展示</b></a>
+          </div>
+        </div>
+        <div class="first_div">
+          <div class="btn timelink">
+            <a href="" class="main"><b>水棲生物調査班 展示</b></a>
+          </div>
+        </div>
+      </div>
+      <div class="flex_div">
+        <div class="first_div">
+          <div class="btn timelink">
+            <a href="" class="main"><b>天文班 展示</b></a>
+          </div>
+        </div>
+        <div class="first_div">
+          <div class="btn timelink">
+            <a href="" class="main"><b>技術班 展示</b></a>
+          </div>
+        </div>
+        <div class="first_div">
+          <div class="btn timelink">
+            <a href="" class="main"><b>科学体験教室</b></a>
+          </div>
+        </div>
+      </div>
   </section>
 
   
   
   <section class="detail_area sub_area date_area">
-    <h1>GREETING</h1>
+    <h2>GREETING</h2>
     <p class="txt">　この度は、東京都市大学等々力中学校・高等学校理科部の藍桐祭特設ページにお越しいただき、誠にありがとうございます。理科部の顧問を務めさせていただいております、平山瑛一と申します。<br>　本校理科部は、平成20年の発足以来、身近な自然現象の探求、科学技術の育成、未知なるものへの好奇心を柱に活動を続け、現在では本校文化部の中でも最も大きな規模をほこる団体へと発展してまいりました。その活動は動植物研究、生態調査、機械・情報工学、天体観測やプラネタリウム作成など多岐にわたり、多くの生徒が研究活動に携わっております。<br>　しかしながら、昨今の新型コロナウイルス感染の拡大に伴い、活動の範囲や日数などに大きな制限のかかる日々が続いてまいりました。<br>　此度、Web上ではありますが、本校理科部のこれまでの活動や、現在の研究・調査を発表する目的で、特別展「サイヱンスノハナ」を開催させていただきます。<br>　13年間にわたる理科部の軌跡から、自然科学や科学技術への興味をますます深めていただければ幸甚です。どうぞ、ごゆっくりお楽しみください。
     <p class="txt1">理科部 顧問　平山瑛一　</p>
     </p><br>
-    <p class="txt">　本日は都市大等々力理科部 藍桐祭特設ページをご覧いただきありがとうございます。理科部員を代表して心よりお礼申し上げます。<br>　今年度の藍桐祭では、普段は見ることの出来ない理科部の所蔵する様々な生き物の標本や天体観測の記録、電気自動車などの展示や、毎年多くの来校者の皆さまに大人気の科学体験教室や電気自動車の試乗体験などの企画を用意しました。この他にも、自然科学や科学技術への興味を深めてもらえるような企画を多数用意しております。<br>　最後に、今年度の藍桐祭は新型コロナウイルス感染症の感染拡大を受け、直接は展示をご覧いただくことは出来ませんが、理科部員が日々全力を尽くし励んでいる成果を保護者の方々や受験生の皆さんに見て頂くために、理科部員一同、この藍桐祭 特設ページにて展示発表出来るように準備を進めて参りました。最後までお楽しみいただければ幸いです。
+    <p class="txt">　本日は都市大等々力理科部 藍桐祭特設ページをご覧いただきありがとうございます。理科部員を代表して心よりお礼申し上げます。<br>　今年度の藍桐祭は新型コロナウイルス感染症の感染拡大を受け、展示を直接ご覧いただくことは出来ません。しかし、理科部員が日々全力を尽くし励んでいる活動の成果を保護者の方々や受験生の皆さんに是非ご覧いただきたいと考え、理科部員一同、この藍桐祭 特設ページにて展示発表出来るように準備を進めて参りました。具体的には、普段見ることの出来ない理科部の所蔵する様々な生き物の標本や天体観測の記録、電気自動車などの展示や、毎年多くの来校者の皆さまに大人気の科学体験教室などの企画をご用意しました。<br>　最後までお楽しみいただければ幸いです。
     <p class="txt1">理科部 部長　</p>
     </p>
   </section>
@@ -59,14 +89,14 @@
    
   
   <section class="detail_area sub_area date_area">
-    <h1>COVID-19 PROTECTIVE MEASURES</h1>
+    <h2>COVID-19 PROTECTIVE MEASURES</h2>
     <p class="txt">東京都市大学等々力中学校・高等学校 理科部では、本校で定められたガイドライン（部活・委員会共通点時発表団体コロナ対策）に基づき、以下の取り組みを実施しています。</p>
     <div class="flex_div">
       <div class="first_div">
         <p class="txt2"><b>定期的な清掃・消毒・除菌</b></p>
         <p class="txt">定期的な清掃をする際に、お客様の手の触れる場所を中心に消毒液等による消毒・除菌を行っています。また、各発表会場の入り口に消毒液を設置しています。</p>
       </div>
-      <div class="second_div">
+      <div class="first_div">
         <p class="txt2"><b>解説担当生徒のマスク着用</b></p>
         <p class="txt">解説担当生徒のマスク着用を義務付けています。また、生徒同士の距離の確保やシフト前に必ず検温をはじめとする健康チェックを実施しています。</p>
       </div>
@@ -76,7 +106,7 @@
         <p class="txt2"><b>各発表会場内の換気の徹底</b></p>
         <p class="txt">各発表会場は前後扉・窓を常時解放しておくことで換気を行っています。これに加えて、換気扇・空調装置・サーキュレーターを使用して換気をさらに促進させています。</p>
       </div>
-      <div class="second_div">
+      <div class="first_div">
         <p class="txt2"><b>その他各発表会場内の対策</b></p>
         <p class="txt">お客様同士の距離を確保するために、展示をご覧いただく立ち位置を示すマークを記したり、発表会場内の人数を制限するなどしています。</p>
       </div>
@@ -86,7 +116,7 @@
   
 
   <section class="detail_area sub_area date_area">
-    <h1>ACCESS MAP</h1>
+    <h2>ACCESS MAP</h2>
     <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3243.560563334317!2d139.6498738152139!3d35.61390488020995!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x6018f4f7bc55522f%3A0xd108ecc848d5815e!2z5p2x5Lqs6YO95biC5aSn5a2m562J44CF5Yqb5Lit5a2m5qCh44O76auY562J5a2m5qCh!5e0!3m2!1sja!2sjp!4v1628150304124!5m2!1sja!2sjp" width="100%" height="450" style="border:0;" allowfullscreen="" loading="lazy"></iframe>
     <p class="txt"><br>【住所】東京都世田谷区等々力８丁目10-１<br>【電車】東急大井町線　等々力駅　下車 徒歩10分<br>【バス】黒02系統　都市大等々力キャンパス前　下車 徒歩１分<br>　　　　渋82系統　玉川警察署前　下車 徒歩５分<br>　　　　等11系統　玉川警察署前　下車 徒歩５分<br>　　　　等12系統　玉川警察署前　下車 徒歩５分<br>　　　　東98系統　都市大等々力キャンパス前　下車 徒歩１分<br><br><b>＊駐車場がありませんので、お車でのご来校はご遠慮ください。なお、学校周辺の道路は、駐車禁止となっております。</b></p>
   </section>
@@ -94,20 +124,18 @@
   
   
   <section class="detail_area sub_area date_area">
-    <h1>COLLECTION OF WEB LINK</h1>
+    <h2>COLLECTION OF WEB LINK</h2>
     <div class="flex_div">
       <div class="first_div">
         <a href="https://tcut-sci-tech.github.io/top/"><img src="tcut_hp.jpg"></a>
       </div>
-      <div class="second_div">
+      <div class="first_div">
         <a href="https://twitter.com/tcut_sci_tech"><img src="tcut_twitter.jpg"></a>
       </div>
-    </div>
-    <div class="flex_div">
       <div class="first_div">
         <a href="https://www.tcu-todoroki.ed.jp/"><img src="tcu_hp.jpg"></a>
       </div>
-      <div class="second_div">
+      <div class="first_div">
         <a href="https://aigirisai-2021.com"><img src="tcu_aigiri_hp.jpg"></a>
       </div>
     </div>
