--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
       <div class="flex_div">
         <div class="first_div">
           <div class="btn timelink">
-            <a href="" class="main"><b>脊椎動物研究班 展示</b></a>
+            <a href="https://tcut-sci-tech.github.io/aigirisai21-biology-vertebrate/" class="main"><b>脊椎動物研究班 展示</b></a>
           </div>
         </div>
         <div class="first_div">
@@ -68,7 +68,7 @@
         </div>
         <div class="first_div">
           <div class="btn timelink">
-            <a href="" class="main"><b>科学体験教室</b></a>
+            <a href="https://tcut-sci-tech.github.io/aigirisai21-chemistry/" class="main"><b>科学体験教室</b></a>
           </div>
         </div>
       </div>
