--- a/index.html
+++ b/index.html
@@ -37,41 +37,44 @@
   
   
   <section class="detail_area sub_area date_area">
-    <h1>2021.10.2(<i class="sat">sat</i>)・10.3(<i class="sun">sun</i>)</h1>
+    <h1>2021.10.3(<i class="sun">sun</i>)</h1>
       <div class="flex_div">
-        <div class="first_div">
+        <div class="a_div">
           <div class="btn timelink">
             <a href="https://tcut-sci-tech.github.io/aigirisai21-biology-vertebrate/" class="main"><b>脊椎動物研究班 展示</b></a>
           </div>
         </div>
-        <div class="first_div">
+        <div class="a_div">
           <div class="btn timelink">
             <a href="" class="main"><b>昆虫調査班 展示</b></a>
           </div>
         </div>
-        <div class="first_div">
+        <div class="a_div">
           <div class="btn timelink">
             <a href="" class="main"><b>水棲生物調査班 展示</b></a>
           </div>
         </div>
       </div>
       <div class="flex_div">
-        <div class="first_div">
+        <div class="a_div">
           <div class="btn timelink">
             <a href="" class="main"><b>天文班 展示</b></a>
           </div>
         </div>
-        <div class="first_div">
+        <div class="a_div">
           <div class="btn timelink">
             <a href="" class="main"><b>技術班 展示</b></a>
           </div>
         </div>
-        <div class="first_div">
+        <div class="a_div">
           <div class="btn timelink">
             <a href="https://tcut-sci-tech.github.io/aigirisai21-chemistry/" class="main"><b>科学体験教室</b></a>
           </div>
         </div>
       </div>
+    　<div class="mission">
+       <p class="txt4">新型コロナウイルスの感染が拡大している状況を鑑み、誠に勝手ながらすべての体験型展示や科学実験は中止とさせていただきます。<br>何とぞご理解のほどよろしくお願い申し上げます。</p>
+    　</div>
   </section>
 
   
@@ -92,21 +95,21 @@
     <h2>COVID-19 PROTECTIVE MEASURES</h2>
     <p class="txt">東京都市大学等々力中学校・高等学校 理科部では、本校で定められたガイドライン（部活・委員会共通点時発表団体コロナ対策）に基づき、以下の取り組みを実施しています。</p>
     <div class="flex_div">
-      <div class="first_div">
+      <div class="b_div">
         <p class="txt2"><b>定期的な清掃・消毒・除菌</b></p>
         <p class="txt">定期的な清掃をする際に、お客様の手の触れる場所を中心に消毒液等による消毒・除菌を行っています。また、各発表会場の入り口に消毒液を設置しています。</p>
       </div>
-      <div class="first_div">
+      <div class="b_div">
         <p class="txt2"><b>解説担当生徒のマスク着用</b></p>
         <p class="txt">解説担当生徒のマスク着用を義務付けています。また、生徒同士の距離の確保やシフト前に必ず検温をはじめとする健康チェックを実施しています。</p>
       </div>
     </div>
     <div class="flex_div">
-      <div class="first_div">
+      <div class="b_div">
         <p class="txt2"><b>各発表会場内の換気の徹底</b></p>
         <p class="txt">各発表会場は前後扉・窓を常時解放しておくことで換気を行っています。これに加えて、換気扇・空調装置・サーキュレーターを使用して換気をさらに促進させています。</p>
       </div>
-      <div class="first_div">
+      <div class="b_div">
         <p class="txt2"><b>その他各発表会場内の対策</b></p>
         <p class="txt">お客様同士の距離を確保するために、展示をご覧いただく立ち位置を示すマークを記したり、発表会場内の人数を制限するなどしています。</p>
       </div>
@@ -126,16 +129,16 @@
   <section class="detail_area sub_area date_area">
     <h2>COLLECTION OF WEB LINK</h2>
     <div class="flex_div">
-      <div class="first_div">
+      <div class="a_div">
         <a href="https://tcut-sci-tech.github.io/top/"><img src="tcut_hp.jpg"></a>
       </div>
-      <div class="first_div">
+      <div class="a_div">
         <a href="https://twitter.com/tcut_sci_tech"><img src="tcut_twitter.jpg"></a>
       </div>
-      <div class="first_div">
+      <div class="a_div">
         <a href="https://www.tcu-todoroki.ed.jp/"><img src="tcu_hp.jpg"></a>
       </div>
-      <div class="first_div">
+      <div class="a_div">
         <a href="https://aigirisai-2021.com"><img src="tcu_aigiri_hp.jpg"></a>
       </div>
     </div>
