--- a/index.html
+++ b/index.html
@@ -46,24 +46,24 @@
         </div>
         <div class="a_div">
           <div class="btn timelink">
-            <a href="" class="main"><b>昆虫調査班 展示</b></a>
+            <a href="https://tcut-sci-tech.github.io/aigirisai21-biology-insect/" class="main"><b>昆虫調査班 展示</b></a>
           </div>
         </div>
         <div class="a_div">
           <div class="btn timelink">
-            <a href="" class="main"><b>水棲生物調査班 展示</b></a>
+            <a href="https://tcut-sci-tech.github.io/aigirisai21-biology-aquatic/" class="main"><b>水棲生物調査班 展示</b></a>
           </div>
         </div>
       </div>
       <div class="flex_div">
         <div class="a_div">
           <div class="btn timelink">
-            <a href="" class="main"><b>天文班 展示</b></a>
+            <a href="https://tcut-sci-tech.github.io/aigirisai21-biology-astoro/" class="main"><b>天文班 展示</b></a>
           </div>
         </div>
         <div class="a_div">
           <div class="btn timelink">
-            <a href="" class="main"><b>技術班 展示</b></a>
+            <a href="https://tcut-sci-tech.github.io/aigirisai21-biology-tech/" class="main"><b>技術班 展示</b></a>
           </div>
         </div>
         <div class="a_div">
