--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <html lang="ja">
 <head>
 	<meta charset="UTF-8">
-	<meta name="都市大等々力理科部藍桐祭" content="TCU Tosoroki Science Research Club">
+	<meta name="都市大等々力理科部藍桐祭" content="TCU Todoroki Science Research Club">
 	<meta name="viewport" content="width=device-width">
 	<title>都市大等々力理科部藍桐祭</title>
 	<link rel="stylesheet" media="all" href="css/style.css">
@@ -13,7 +13,7 @@
 <body id="top">
   <section class="wrap_top">
     <div id="content">
-			<p id="mainImg"><img src="生物室.jpg" width="100%" height="auto"></p>
+			<p id="mainImg"><img src="サイヱンスノハナ.jpg" width="100%" height="auto"></p>
       <div class="side_area topPage">
         <div id="navBtn">
           <span class="top"></span>
@@ -73,7 +73,7 @@
         </div>
       </div>
     　<div class="mission">
-       <p class="txt4">新型コロナウイルスの感染が拡大している状況を鑑み、誠に勝手ながらすべての体験型展示や科学実験は中止とさせていただきます。<br>何とぞご理解のほどよろしくお願い申し上げます。</p>
+       <p class="txt4">新型コロナウイルスの感染が拡大している状況を鑑み、誠に勝手ながらすべての体験型展示や科学体験教室は中止とさせていただきます。<br>何とぞご理解のほどよろしくお願い申し上げます。</p>
     　</div>
   </section>
 
