--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 <body id="top">
   <section class="wrap_top">
     <div id="content">
-			<p id="mainImg"><img src="サイヱンスノハナ.jpg" width="100%" height="auto"></p>
+			<p id="mainImg"><img src="ｻｲｴﾝｽﾉﾊﾅ.jpg" width="100%" height="auto"></p>
       <div class="side_area topPage">
         <div id="navBtn">
           <span class="top"></span>
