--- a/index.html
+++ b/index.html
@@ -126,29 +126,21 @@
 
   
   
-  <section class="detail_area sub_area date_area">
-    <h2>COLLECTION OF WEB LINK</h2>
-    <div class="flex_div">
-      <div class="a_div">
-        <a href="https://tcut-sci-tech.github.io/top/"><img src="tcut_hp.jpg"></a>
+  <footer>
+    <section class="sub_area">
+      <div class="footer_logo">
+        <a href="https://tcut-sci-tech.github.io/top/"><img src="tcut.jpg" width="100%"></a>
       </div>
-      <div class="a_div">
-        <a href="https://twitter.com/tcut_sci_tech"><img src="tcut_twitter.jpg"></a>
-      </div>
-      <div class="a_div">
-        <a href="https://www.tcu-todoroki.ed.jp/"><img src="tcu_hp.jpg"></a>
-      </div>
-      <div class="a_div">
-        <a href="https://aigirisai-2021.com"><img src="tcu_aigiri_hp.jpg"></a>
-      </div>
-    </div>
-  </section>
-
-  
-  
-  <footer id="footer">
-    <b>Copyright©2021 TCU Todoroki Science Research Club , All Rights Reserved.</b>
-  </footer>
+      <nav>
+        <ul>
+          <li><a href="https://tcut-sci-tech.github.io/top/">東京都市大学等々力中学校高等学校 理科部 ホームページ</a></li>
+          <li><a href="https://twitter.com/tcut_sci_tech">東京都市大学等々力中学校高等学校 理科部 Twitter</a></li>
+          <li><a href="https://www.tcu-todoroki.ed.jp/">東京都市大学等々力中学校高等学校 ホームページ</a></li>
+          <li><a href="https://aigirisai-2021.com">東京都市大学等々力中学校高等学校 藍桐祭 ホームページ</a></li
+        </ul>
+      </nav>
+    </section>
+</footer>
    
   
    
