--- a/index.html
+++ b/index.html
@@ -133,10 +133,23 @@
       </div>
       <nav>
         <ul>
-          <li><a href="https://tcut-sci-tech.github.io/top/">東京都市大学等々力中学校高等学校 理科部 ホームページ</a></li>
-          <li><a href="https://twitter.com/tcut_sci_tech">東京都市大学等々力中学校高等学校 理科部 Twitter</a></li>
-          <li><a href="https://www.tcu-todoroki.ed.jp/">東京都市大学等々力中学校高等学校 ホームページ</a></li>
-          <li><a href="https://aigirisai-2021.com">東京都市大学等々力中学校高等学校 藍桐祭 ホームページ</a></li
+          <div class="flex_div">
+            <div class="b_div">
+              <li><a href="https://tcut-sci-tech.github.io/top/">東京都市大学等々力中学校高等学校 理科部 ホームページ</a></li>
+            </div>
+            <div class="b_div">
+              <li><a href="https://twitter.com/tcut_sci_tech">東京都市大学等々力中学校高等学校 理科部 Twitter</a></li>
+            </div>
+          </div>
+          <div class="flex_div">
+            <div class="b_div">
+              <li><a href="https://www.tcu-todoroki.ed.jp/">東京都市大学等々力中学校高等学校 ホームページ</a></li>
+            </div>
+            <div class="b_div">
+              <li><a href="https://aigirisai-2021.com">東京都市大学等々力中学校高等学校 藍桐祭 ホームページ</a></li>
+            </div>
+          </div>
+          <br><b>Copyright©2021 TCU Todoroki Science Research Club , All Rights Reserved.</b>
         </ul>
       </nav>
     </section>
