--- a/index.html
+++ b/index.html
@@ -8,70 +8,17 @@
 	<title>都市大等々力理科部藍桐祭</title>
 	<link rel="stylesheet" media="all" href="css/style.css">
 	<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.8.0/jquery.min.js"></script>
+  <link href="https://cdnjs.cloudflare.com/ajax/libs/lightbox2/2.7.1/css/lightbox.css" rel="stylesheet">
+  <script src="https://code.jquery.com/jquery-1.12.4.min.js" type="text/javascript"></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/lightbox2/2.7.1/js/lightbox.min.js" type="text/javascript"></script>
 </head>
 
 <body id="top">
-  <section class="wrap_top">
-    <div id="content">
-			<p id="mainImg"><img src="ｻｲｴﾝｽﾉﾊﾅ.jpg" width="100%" height="auto"></p>
-      <div class="side_area topPage">
-        <div id="navBtn">
-          <span class="top"></span>
-          <span class="bottom"></span>
-        </div>
-        <script type="text/javascript">include("parts/nav.html");</script>
-        <nav>
-          <ul class="pc">
-            <li><a href="https://tcut-sci-tech.github.io/aigirisai21/">TOP<span>トップ</a></span></li>
-            <li><a href="https://tcut-sci-tech.github.io/aigirisai21-biology/">BIOLOGY LABORATORY<span>生物室</a></span></li>
-            <li><a href="https://tcut-sci-tech.github.io/aigirisai21-chemistry/">CHEMISTRY LABORATORY<span>化学室</a></span></li>
-            <li><a href="https://tcut-sci-tech.github.io/aigirisai21-ground/">GROUND<span>校庭</a></span></li>
-            <li><a href="">QUESTION<span>アンケート</a></span></li>
-            <li><a href=""><span></a></span></li>
-          </ul>
-        </nav>
-      </div>
-    </div>
-  </section>
   
   
   
   <section class="detail_area sub_area date_area">
     <h1>2021.10.3(<i class="sun">sun</i>)</h1>
-      <div class="flex_div">
-        <div class="a_div">
-          <div class="btn timelink">
-            <a href="https://tcut-sci-tech.github.io/aigirisai21-biology-vertebrate/" class="main"><b>脊椎動物研究班 展示</b></a>
-          </div>
-        </div>
-        <div class="a_div">
-          <div class="btn timelink">
-            <a href="https://tcut-sci-tech.github.io/aigirisai21-biology-insect/" class="main"><b>昆虫調査班 展示</b></a>
-          </div>
-        </div>
-        <div class="a_div">
-          <div class="btn timelink">
-            <a href="https://tcut-sci-tech.github.io/aigirisai21-biology-aquatic/" class="main"><b>水棲生物調査班 展示</b></a>
-          </div>
-        </div>
-      </div>
-      <div class="flex_div">
-        <div class="a_div">
-          <div class="btn timelink">
-            <a href="https://tcut-sci-tech.github.io/aigirisai21-biology-astoro/" class="main"><b>天文班 展示</b></a>
-          </div>
-        </div>
-        <div class="a_div">
-          <div class="btn timelink">
-            <a href="https://tcut-sci-tech.github.io/aigirisai21-biology-tech/" class="main"><b>技術班 展示</b></a>
-          </div>
-        </div>
-        <div class="a_div">
-          <div class="btn timelink">
-            <a href="https://tcut-sci-tech.github.io/aigirisai21-chemistry/" class="main"><b>科学体験教室</b></a>
-          </div>
-        </div>
-      </div>
     　<div class="mission">
        <p class="txt4">新型コロナウイルスの感染が拡大している状況を鑑み、誠に勝手ながらすべての体験型展示や科学体験教室は中止とさせていただきます。<br>何とぞご理解のほどよろしくお願い申し上げます。</p>
     　</div>
