--- a/index.html
+++ b/index.html
@@ -14,14 +14,20 @@
 </head>
 
 <body id="top">
+  <section class="wrap_top">
+    <div id="content">
+			<p id="mainImg"><img src="ｻｲｴﾝｽﾉﾊﾅ.jpg" width="100%" height="auto"></p>
+    </div>
+  </section>
   
   
   
   <section class="detail_area sub_area date_area">
-    <h1>2021.10.3(<i class="sun">sun</i>)</h1>
-    　<div class="mission">
-       <p class="txt4">新型コロナウイルスの感染が拡大している状況を鑑み、誠に勝手ながらすべての体験型展示や科学体験教室は中止とさせていただきます。<br>何とぞご理解のほどよろしくお願い申し上げます。</p>
-    　</div>
+    <h1>特別展 サイヱンスノハナ</h1>
+    <h2>2021.10.3(<i class="sun">sun</i>)</h2>
+      <div class="mission">
+        <p class="txt4">新型コロナウイルスの感染が拡大している状況を鑑み、誠に勝手ながらすべての体験型展示や科学体験教室は中止とさせていただきます。<br>何とぞご理解のほどよろしくお願い申し上げます。</p>
+      </div>
   </section>
 
   
