--- a/index.html
+++ b/index.html
@@ -23,8 +23,8 @@
   
   
   <section class="detail_area sub_area date_area">
+    <h2>第75回 藍桐祭</h2>
     <h1>特別展 サイヱンスノハナ</h1>
-    <h2>2021.10.3(<i class="sun">sun</i>)</h2>
       <div class="mission">
         <p class="txt4">新型コロナウイルスの感染が拡大している状況を鑑み、誠に勝手ながらすべての体験型展示や科学体験教室は中止とさせていただきます。<br>何とぞご理解のほどよろしくお願い申し上げます。</p>
       </div>
